--- a/package.json
+++ b/package.json
@@ -23,21 +23,32 @@
   },
   "homepage": "https://github.com/rybakouvlad/travel-app#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "express-validator": "^6.10.0",
+    "mongoose": "^5.11.15",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/config": "0.0.38",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-router-dom": "^5.1.7",
+    "@types/validator": "^13.1.3",
     "@types/webpack": "^4.41.26",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "clean-webpack-plugin": "^3.0.0",
+    "cors": "^2.8.5",
     "css-loader": "^4.3.0",
+    "dotenv-webpack": "^7.0.1",
     "eslint": "^7.17.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -54,6 +65,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.4.1",
     "image-webpack-loader": "^7.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mini-css-extract-plugin": "^0.11.3",
     "node-sass": "^5.0.0",
     "postcss-csso": "^4.0.0",
@@ -63,6 +75,7 @@
     "style-loader": "^1.2.1",
     "ts-loader": "^8.0.17",
     "typescript": "^4.1.5",
+    "validator": "^13.5.2",
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
