--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.8",
     "react-router-dom": "^5.2.0",
-    "slick-carousel": "^1.8.1"
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -85,7 +87,7 @@
     "ts-loader": "^8.0.17",
     "typescript": "^4.1.5",
     "validator": "^13.5.2",
-    "webpack": "^5.22.0",
+    "webpack": "^5.25.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-node-externals": "^2.5.2"
