feat: add all weagets and add component about country

--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "i18next": "^19.9.1",
     "i18next-browser-languagedetector": "^6.0.1",
     "i18next-xhr-backend": "^3.2.2",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "mongoose": "^5.11.15",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.8",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
