--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@popperjs/core": "^2.9.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.0.0-beta2",
+    "express-fileupload": "^1.2.1",
     "express-validator": "^6.10.0",
     "i18next": "^19.9.1",
     "i18next-browser-languagedetector": "^6.0.1",
@@ -48,12 +49,15 @@
     "@types/config": "0.0.38",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.8",
+    "@types/express-fileupload": "^1.1.6",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-slick": "^0.23.4",
+    "@types/shortid": "^0.0.29",
+    "@types/superagent": "^4.1.10",
     "@types/validator": "^13.1.3",
     "@types/webpack": "^4.41.26",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
@@ -86,7 +90,9 @@
     "postcss-loader": "^4.0.2",
     "prettier": "^2.2.1",
     "sass-loader": "^10.1.0",
+    "shortid": "^2.2.16",
     "style-loader": "^1.2.1",
+    "superagent": "^6.1.0",
     "ts-loader": "^8.0.17",
     "typescript": "^4.1.5",
     "validator": "^13.5.2",
