feat: merge branch 'develop' into map

--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   },
   "homepage": "https://github.com/rybakouvlad/travel-app#readme",
   "dependencies": {
+    "@emotion/styled": "^11.1.5",
     "@popperjs/core": "^2.9.1",
+    "@types/leaflet": "^1.7.0",
+    "@types/leaflet-draw": "^1.0.3",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.0.0-beta2",
     "express-fileupload": "^1.2.1",
@@ -33,11 +36,14 @@
     "i18next-xhr-backend": "^3.2.2",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
+    "leaflet": "^1.7.1",
+    "leaflet-draw": "^1.0.4",
     "mongoose": "^5.11.15",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.8",
+    "react-leaflet": "^3.1.0",
     "react-moment": "^1.1.1",
     "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
