--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.8",
     "react-moment": "^1.1.1",
+    "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
