--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-moment": "^1.1.1",
     "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
+    "react-select": "^4.2.1",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "url-loader": "^4.1.1"
@@ -56,6 +57,7 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-select": "^4.0.13",
     "@types/react-slick": "^0.23.4",
     "@types/shortid": "^0.0.29",
     "@types/superagent": "^4.1.10",
