feat: change url

--- a/.env
+++ b/.env
@@ -6,4 +6,5 @@ JWT_SECRET=UpFJfpWKYteH5rMHSxst
 JWT_MAX_AGE=7d
 
 USER_FILE_PATH=./server/assets/img/users
-PATH_LOCAL=127.0.0.1:3333
+# PATH_LOCAL=http://localhost:3333
+PATH_LOCAL=http://178.124.178.250:3333
